# Math-for-Programmers

./: .gitignore  README.md  pyproject.toml  requirements.txt
books/: references.md
libs/: __init__.py
notebooks/: 00_function.py  01_limit.py  02_continuity.py  03_derivative.py  04_differential.py  05_taylor.py  06_newton_method.py  07_integral.py  08_fundamental_theorem.py  09_multivariable.py  10_gradient.py  11_optimization.py  12_differential_equation.py  13_series.py  14_fourier.py
notebooks/__marimo__/session/: 00_function1.py.json  13_series.py.json
roadmap/: progress.md  roadmap.md  schedule.md
